--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
+    "global": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "spa-http-server": "^0.9.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
