--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "Tāne Kaio Portfolio",
+  "short_name": "Tāne",
   "name": "Portfolio of Tāne Kaio",
-  "icons": [],
+  "icons": [{ "48": "favicon.ico" }],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
